boost1.46 (1.46.1-4) unstable; urgency=low

  * NEWS.Debian: fix format.

  * patches/changeset_71050.diff: Fix build with Python 3.2.  Closes:
    #622021
  
 -- Steve M. Robbins <smr@debian.org>  Fri, 15 Apr 2011 12:22:25 -0500

boost1.46 (1.46.1-3) unstable; urgency=low

  * control: Remove package bjam; install bjam and Boost.Build with -dev
    package.  The latter now conflicts and replaces the old bjam and
    boost-build packages.

  * control:
  * compat: Use debhelper compatibility level 8.
  
  * control: Set Standards-Version to 3.9.1.  Don't build using _REENTRANT
    flag.

 -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 18:25:49 -0500

boost1.46 (1.46.1-2) unstable; urgency=low

  * control (libboost-mpi-python1.46.1): Add conflict with
    libboost-mpi-python1.46.0.  Closes: #618441.
  
  * control: new package bjam that installs bjam and manpage.

 -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 14:14:47 -0500

boost1.46 (1.46.1-1) unstable; urgency=low

  * New upstream.
  
  * control: Add libboost-random1.46-dev to depends of -all-dev and
    suggests of -dev.  Closes: #615849.

 -- Steve M. Robbins <smr@debian.org>  Sun, 13 Mar 2011 00:37:35 -0600

boost1.46 (1.46.0-1) unstable; urgency=low

  * New upstream release.
    - Fixes Boost ticket 4631.  Closes: #595955.
    - Program.Options updated.  Closes: #593522.
    - Also Closes: #537680.
  
  * control:
  * rules: Set versions to 1.46.  Remove obsolete conflicts.

  * rules: Don't use "long double" for architecture "armhf".  
    Closes: #604107.
  
  * control:
  * rules: New packages for Boost.Random.  Closes: #610821.
  
 -- Steve M. Robbins <smr@debian.org>  Tue, 22 Feb 2011 00:18:43 -0600

boost1.45 (1.45.0-1) experimental; urgency=low

  * New upstream.
    - patches/kfreebsd-jam.patch: Remove.  Applied upstream.
    - patches/boost-build-pythonid.patch: Remove.  Applied upstream.

  * control:
  * rules:
  * documentation-files: