@@ -6,8 +6,6 @@ Maintainer: Debian Boost Team <pkg-boost-devel@lists.alioth.debian.org>
 Uploaders: Steve M. Robbins <smr@debian.org>, Domenico Andreoli <cavok@debian.org>
 Build-Depends: debhelper (>= 8), bison, flex, docbook-to-man, help2man, xsltproc, doxygen, zlib1g-dev, libbz2-dev, libicu-dev, python-all-dev, python3-all-dev (>= 3.1), python-support (>= 0.6), mpi-default-dev
 Build-Conflicts: libopenmpi-dev (= 1.3.2-2)
-X-Python-Version: >= 2.4
-X-Python3-Version: >= 3.0
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-boost/boost/trunk/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-boost/boost/trunk
 Standards-Version: 3.9.1
@@ -358,6 +356,7 @@ Homepage: http://www.boost.org/doc/html/mpi/python.html
 Architecture: any
 Section: python
 Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}
+Breaks: ${python:Breaks}
 Conflicts: libboost-mpi-python1.40.0,
  libboost-mpi-python1.41.0,
  libboost-mpi-python1.42.0,
@@ -423,7 +422,8 @@ Package: libboost-python1.46.1
 Homepage: http://www.boost.org/libs/python/
 Architecture: any
 Section: python
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, ${python:Depends}
+Breaks: ${python:Breaks}
 Description: Boost.Python Library 
  This package forms part of the Boost C++ Libraries collection.
  .
